--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ Leaderboard
 .leaderboard {
   position: absolute;
   top: 50px;
-  right: 20px;
+  left: 200px;
   width: 950px;
   height: 900px;
   background: linear-gradient(to bottom, #035356, #dc1c40);
