improve background color for readability on hover
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,8 +113,8 @@ Leaderboard
   left: 0;
   width: 100%;
   height: 100%;
-  background: #00dee6;
-  color: black;
+  background: #dc1c40;
+  color: black !important;
   box-shadow: 0 3px 0 rgba(0, 0, 0, 0.08);
   transition: all 0.3s ease-in-out;
   opacity: 0;
